# thesis

./: CMakeLists.txt  README.md  package.xml
launch/: explore.launch  explore_v2.launch  frontier_exploration.launch
pre_git_versions/frontier_exploration_2024_01_20/: CMakeLists.txt
pre_git_versions/frontier_exploration_2024_01_20/launch/: frontier_exploration.launch
pre_git_versions/frontier_exploration_2024_01_20/src/: frontier_extraction.cpp  mapping_coverage.cpp  path_following.cpp  path_planning.cpp
pre_git_versions/frontier_exploration_2024_01_21/: CMakeLists.txt  package.xml
pre_git_versions/frontier_exploration_2024_01_21/include/frontier_exploration/: clustering.h
pre_git_versions/frontier_exploration_2024_01_21/scripts/: listener.py
pre_git_versions/frontier_exploration_2024_01_21/src/: frontier_extraction.cpp  frontier_selection.cpp  mapping_coverage.cpp
pre_git_versions/frontier_exploration_2024_02_04/frontier_exploration/scripts/: plotter.py
pre_git_versions/frontier_exploration_2024_02_04/frontier_exploration/src/: frontier_extraction.cpp  frontier_extraction_multiuav.cpp
pre_git_versions/frontier_exploration_2024_02_06/frontier_exploration/include/frontier_exploration/: clusteringAlgorithm.h
pre_git_versions/frontier_exploration_2024_02_06/frontier_exploration/scripts/: frontier_exploration.py  plotter.py
pre_git_versions/frontier_exploration_2024_02_06/frontier_exploration/src/: frontier_extraction.cpp  frontier_extraction_multiuav.cpp  octomap_merger.cpp
pre_git_versions/frontier_exploration_2024_02_06/thesis/: 2024-01-24-13-57-03.bag  2024-01-24-14-10-23.bag  2024-02-06-14-06-20.bag.active  2024-02-06-14-09-14.bag.active  pos.yaml  session.yml  solo_uav.bag  uav.rviz
pre_git_versions/frontier_exploration_2024_02_06/thesis/config/: custom_config.yaml  tf_connector.yaml
pre_git_versions/frontier_exploration_2024_02_07/: mapfile.bt
pre_git_versions/frontier_exploration_2024_02_07/frontier_exploration/: CMakeLists.txt
pre_git_versions/frontier_exploration_2024_02_07/frontier_exploration/scripts/: plotter.py
pre_git_versions/frontier_exploration_2024_02_07/frontier_exploration/src/: frontier_extraction.cpp  frontier_extraction_multiuav.cpp
pre_git_versions/frontier_exploration_2024_02_07/thesis/: 2024-01-24-12-52-49.bag  2024-02-06-18-14-23.bag.active  2024-02-06-22-41-48.bag.active  2024-02-07-00-50-14.bag.active  pos.yaml  session.yml  uav.rviz
pre_git_versions/frontier_exploration_2024_02_07/thesis/config/: octomap_planner.yaml
pre_git_versions/frontier_exploration_2024_02_07/thesis/worlds/: disaster.world
pre_git_versions/ieee_paper/exploration_ws/.catkin_tools/profiles/default/: devel_collisions.txt
pre_git_versions/ieee_paper/exploration_ws/src/frontier_exploration/: CMakeLists.txt
pre_git_versions/ieee_paper/exploration_ws/src/frontier_exploration/scripts/: multiuav_coverage.py  pcl.py  plotter.py  solouav_coverage.py  talker.py
pre_git_versions/ieee_paper/exploration_ws/src/frontier_exploration/src/: frontier_extraction_three_uav.cpp  frontier_extraction_two_uav.cpp
pre_git_versions/ieee_paper/thesis/: one_uav.bt  pos.yaml  session.yml  session2.yml  session3.yml  start.sh  uav.rviz
pre_git_versions/ieee_paper/thesis/config/: custom_config.yaml  octomap_planner.yaml  tf_connector.yaml
pre_git_versions/ieee_paper/thesis/worlds/: disaster.world
scripts/: benchmark_comparison.py  comparative_analysis.py  computation_times.py  coverage_plotter.py  get_z.py  lambda_comparison.py  multiuav_coverage.py  results_calculator.py  results_calculator_multi_uav.py  thesis.py
src/: frontier_exploration.cpp  frontier_exploration_v2.cpp  frontier_extraction.cpp  multiuav_exploration.cpp  octomap_merger.cpp
tmux/: session.yml  uav.rviz
tmux/bags/1_uav/: test_d15_4.bag  test_d15_5.bag
tmux/bags/2_uav/: 2024-05-28-17-46-08.bag.active  2024-05-28-17-48-22.bag.active  2024-05-28-17-58-09.bag.active
tmux/config/: tf_connector.yaml
tmux/icarsc/2_uav/: frames.gv
tmux/old_bags/: solouav1res.bt
(+1 files in other folders)
